// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table body is rendered 1`] = `
.c0 {
  margin: 0;
  table-layout: fixed;
  border-collapse: collapse;
  border: none;
  font-weight: normal;
  width: initial;
  padding: 0;
}

<div>
  <table
    className="c0"
  >
    <tbody
      props={
        Object {
          "children": null,
        }
      }
    />
  </table>
</div>
`;

exports[`Table body with rows is rendered 1`] = `
.c0 {
  margin: 0;
  table-layout: fixed;
  border-collapse: collapse;
  border: none;
  font-weight: normal;
  width: initial;
  padding: 0;
}

<div>
  <table
    className="c0"
  >
    <tbody
      props={
        Object {
          "children": Array [
            <TableRow>
              <TableCell
                colSpan={1}
                rowSpan={1}
                scope="body"
                width="initial"
              />
              <TableCell
                colSpan={1}
                rowSpan={1}
                scope="body"
                width="initial"
              />
            </TableRow>,
            <TableRow>
              <TableCell
                colSpan={1}
                rowSpan={1}
                scope="body"
                width="initial"
              />
              <TableCell
                colSpan={1}
                rowSpan={1}
                scope="body"
                width="initial"
              />
            </TableRow>,
          ],
        }
      }
    >
      <tr>
        <td
          colSpan={1}
          rowSpan={1}
          scope="body"
          style={
            Object {
              "maxWidth": "initial",
              "minWidth": "initial",
              "width": "initial",
            }
          }
        />
        <td
          colSpan={1}
          rowSpan={1}
          scope="body"
          style={
            Object {
              "maxWidth": "initial",
              "minWidth": "initial",
              "width": "initial",
            }
          }
        />
      </tr>
      <tr>
        <td
          colSpan={1}
          rowSpan={1}
          scope="body"
          style={
            Object {
              "maxWidth": "initial",
              "minWidth": "initial",
              "width": "initial",
            }
          }
        />
        <td
          colSpan={1}
          rowSpan={1}
          scope="body"
          style={
            Object {
              "maxWidth": "initial",
              "minWidth": "initial",
              "width": "initial",
            }
          }
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table caption is rendered 1`] = `
.c1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-weight: normal;
  text-align: left;
}

.c0 {
  margin: 0;
  table-layout: fixed;
  border-collapse: collapse;
  border: none;
  font-weight: normal;
  width: initial;
  padding: 0;
}

<div>
  <table
    className="c0"
  >
    <caption
      className="c1"
    >
      Caption
    </caption>
  </table>
</div>
`;

exports[`Table footer is rendered 1`] = `
.c0 {
  margin: 0;
  table-layout: fixed;
  border-collapse: collapse;
  border: none;
  font-weight: normal;
  width: initial;
  padding: 0;
}

<div>
  <table
    className="c0"
  >
    <tfoot
      props={
        Object {
          "children": null,
        }
      }
    />
  </table>
</div>
`;

exports[`Table footer with rows is rendered 1`] = `
.c0 {
  margin: 0;
  table-layout: fixed;
  border-collapse: collapse;
  border: none;
  font-weight: normal;
  width: initial;
  padding: 0;
}

<div>
  <table
    className="c0"
  >
    <tfoot
      props={
        Object {
          "children": <TableRow>
            <TableCell
              colSpan={1}
              rowSpan={1}
              scope="footer"
              width="initial"
            />
            <TableCell
              colSpan={1}
              rowSpan={1}
              scope="footer"
              width="initial"
            />
          </TableRow>,
        }
      }
    >
      <tr>
        <td
          colSpan={1}
          rowSpan={1}
          scope="footer"
          style={
            Object {
              "maxWidth": "initial",
              "minWidth": "initial",
              "width": "initial",
            }
          }
        />
        <td
          colSpan={1}
          rowSpan={1}
          scope="footer"
          style={
            Object {
              "maxWidth": "initial",
              "minWidth": "initial",
              "width": "initial",
            }
          }
        />
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table header is rendered 1`] = `
.c0 {
  margin: 0;
  table-layout: fixed;
  border-collapse: collapse;
  border: none;
  font-weight: normal;
  width: initial;
  padding: 0;
}

<div>
  <table
    className="c0"
  >
    <thead
      props={
        Object {
          "children": null,
        }
      }
    />
  </table>
</div>
`;

exports[`Table header with rows is rendered 1`] = `
.c0 {
  margin: 0;
  table-layout: fixed;
  border-collapse: collapse;
  border: none;
  font-weight: normal;
  width: initial;
  padding: 0;
}

<div>
  <table
    className="c0"
  >
    <thead
      props={
        Object {
          "children": Array [
            <TableRow>
              <TableCell
                colSpan={1}
                rowSpan={1}
                scope="header"
                width="initial"
              />
              <TableCell
                colSpan={1}
                rowSpan={1}
                scope="header"
                width="initial"
              />
            </TableRow>,
            <TableRow>
              <TableCell
                colSpan={1}
                rowSpan={1}
                scope="header"
                width="initial"
              />
              <TableCell
                colSpan={1}
                rowSpan={1}
                scope="header"
                width="initial"
              />
            </TableRow>,
          ],
        }
      }
    >
      <tr>
        <td
          colSpan={1}
          rowSpan={1}
          scope="header"
          style={
            Object {
              "maxWidth": "initial",
              "minWidth": "initial",
              "width": "initial",
            }
          }
        />
        <td
          colSpan={1}
          rowSpan={1}
          scope="header"
          style={
            Object {
              "maxWidth": "initial",
              "minWidth": "initial",
              "width": "initial",
            }
          }
        />
      </tr>
      <tr>
        <td
          colSpan={1}
          rowSpan={1}
          scope="header"
          style={
            Object {
              "maxWidth": "initial",
              "minWidth": "initial",
              "width": "initial",
            }
          }
        />
        <td
          colSpan={1}
          rowSpan={1}
          scope="header"
          style={
            Object {
              "maxWidth": "initial",
              "minWidth": "initial",
              "width": "initial",
            }
          }
        />
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Table is rendered 1`] = `
.c0 {
  margin: 0;
  table-layout: fixed;
  border-collapse: collapse;
  border: none;
  font-weight: normal;
  width: initial;
  padding: 0;
}

<div>
  <table
    className="c0"
  />
</div>
`;

exports[`Table table is rendered with custom css 1`] = `
.c0 {
  margin: 0;
  table-layout: fixed;
  border-collapse: collapse;
  border: none;
  font-weight: normal;
  width: initial;
  padding: 0;
  background-color: #000;
}

.c1 {
  margin: 0;
  table-layout: fixed;
  border-collapse: collapse;
  border: none;
  font-weight: normal;
  width: initial;
  padding: 0;
  background-color: #111;
}

.c2 {
  margin: 0;
  table-layout: fixed;
  border-collapse: collapse;
  border: none;
  font-weight: normal;
  width: initial;
  padding: 0;
  background-color: #222;
}

<div>
  <table
    className="c0"
  />
  <table
    className="c1"
  />
  <table
    className="c2"
  />
</div>
`;
